syntax = "proto3";

option go_package = "github.com/maxmoehl/tt";

package tt;

service Tt {
  rpc StartTimer(StartParameters) returns (gRpcTimer) {}
  rpc StopTimer(StopParameters) returns (gRpcTimer) {}
  rpc ResumeTimer(ResumeParameters) returns (gRpcTimer) {}
}

message gRpcTimer {
  string id = 1;
  string project = 2;
  string task = 3;
  repeated string tags = 4;
  string start = 5;
  string stop = 6;
}

message StartParameters {
  string project = 1;
  string task = 2;
  repeated string tags = 3;
  string timestamp = 4;
}

message StopParameters {
  string timestamp = 1;
}

message ResumeParameters {
  string timestamp = 1;
}

message SimpleResponse {
  bool success = 1;
  string error = 2;
}
